hphp/test/slow/await_as_an_expression/error/binop8.php.expectf

Fatal error: Unary expression is not allowed in write context in %s/binop8.php on line 16
